- edited hours and description.
-removed image captions.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<main>
 			<header class="row tm-welcome-section">
 				<h2 class="col-12 text-center tm-section-title">Welcome to Mac's Convenience</h2>
-				<p class="col-12 text-center">Our store sells a variety of products including....</p>
+				<p class="col-12 text-center">Mac’s Convenience is a fully equipped gas bar and convenience store. <br />
+					We sell gas, diesel, beer, cigarettes, soft serve, slushies, giftware, and much more!</p>
 			</header>
 
 			<!-- Gallery -->
@@ -49,81 +50,41 @@
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/softserve_blur.png" alt="Image" class="img-fluid tm-gallery-img" />
-							<!-- <figcaption> -->
-								<!-- <h4 class="tm-gallery-title">Soft Serve</h4> -->
-								<!-- <p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$45 / $55</p> -->
-							<!-- </figcaption> -->
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/02.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Aliquam sagittis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$65 / $70</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/03.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Sed varius turpis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$30.50</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/04.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Aliquam sagittis</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$25.50</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/05.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Maecenas eget justo</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$80.25</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/06.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Quisque et felis eros</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$20 / $40 / $60</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/07.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Sed ultricies dui</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$94</p>
-							</figcaption>
 						</figure>
 					</article>
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/08.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-							<figcaption>
-								<h4 class="tm-gallery-title">Donec porta consequat</h4>
-								<p class="tm-gallery-description">Nam in suscipit nisi, sit amet consectetur metus. Ut sit amet tellus accumsan</p>
-								<p class="tm-gallery-price">$15</p>
-							</figcaption>
 						</figure>
 					</article>
 				</div> <!-- gallery page 1 -->
@@ -305,16 +266,41 @@
 				<div class="contact-subsection">
 					<h4 class="tm-info-title contact-subsection-title">Hours</h4>
 					<address>
-						Open Daily
-						<br />
-						6AM - 10PM
+						<div class="hours-row">
+							<span>Monday:</span>
+							<span>7AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Tuesday:</span>
+							<span>7AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Wednesday:</span>
+							<span>7AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Thursday:</span>
+							<span>7AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Friday:</span>
+							<span>7AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Saturday:</span>
+							<span>9AM - 9PM</span>
+						</div>
+						<div class="hours-row">
+							<span>Sunday:</span>
+							<span>10AM - 9PM</span>
+						</div>
 					</address>
 				</div>
 				<div>
 					<h4 class="tm-info-title contact-subsection-title">Contact</h4>
 					<a href="tel:080-090-0110" class="tm-contact-link">
 						<img src="img/phone-icon.png" alt="phone icon" class="tm-contact-icon"></img>
-						709-882-2564
+						(709) 882-2564
 					</a>
 				</div>
 				<div>
