- experimenting with landing page image.
- named updates section to announcements.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Top box -->
 		<!-- Logo & Site Name -->
 		<div class="placeholder">
-			<div class="parallax-window" data-parallax="scroll" data-image-src="img/macs1.jpg">
+			<div class="parallax-window" data-parallax="scroll" data-image-src="img/test.jpg">
 				<div class="tm-header">
 					<div class="row tm-header-inner">
 						<div class="col-md-6 col-12">
@@ -27,7 +27,7 @@
 						<nav class="col-md-6 col-12 tm-nav">
 							<ul class="tm-nav-ul">
 								<li class="tm-nav-li"><a href="#about" class="tm-nav-link">About</a></li>
-								<li class="tm-nav-li"><a href="#updates" class="tm-nav-link">Updates</a></li>
+								<li class="tm-nav-li"><a href="#announcements" class="tm-nav-link">Announcements</a></li>
 								<li class="tm-nav-li"><a href="#contact" class="tm-nav-link">Contact</a></li>
 								<script>
 									document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -112,8 +112,8 @@
 		</div>
 
 		<div>
-			<header class="row tm-welcome-section" id="updates">
-				<h2 class="col-12 text-center tm-section-title">Store Updates</h2>
+			<header class="row tm-welcome-section" id="announcements">
+				<h2 class="col-12 text-center tm-section-title">Store Announcements</h2>
 				<p class="col-12 text-center fb-description">See our Facebook page below for updates on sales, new products, and more.</p>
 			</header>
 
