--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
 			</div>
 		</div>
 
+		<button id="backToTopBtn" class="back-to-top-btn" onclick="topFunction()" title="Back to top">Back to Top</button>
+
 		<footer class="tm-footer text-center">
 			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience | Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna McDonald</a> </p>
 		</footer>
@@ -223,6 +225,23 @@
 				});
 			});
 		});
+	</script>
+	<script>
+		let backToTopBtn = document.getElementById("backToTopBtn");
+		window.onscroll = () => scrollFunction();
+
+		scrollFunction = () => {
+			if (document.body.scrollTop > 700 || document.documentElement.scrollTop > 700) {
+				backToTopBtn.style.display = "block";
+			} else {
+				backToTopBtn.style.display = "none";
+			}
+		}
+
+		topFunction = () => {
+			document.body.scrollTop = 0;
+			document.documentElement.scrollTop = 0;
+		}
 	</script>
 </body>
 </html>
