added a new section to the gallery

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 </head>
 <body> 
 	<div class="container">
+	<div class="tm-header">
+		<div class="row tm-header-inner">
+			<div class="col-md-6 col-12">
+				<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
+				<div class="tm-site-text-box">
+					<h1 class="tm-site-title">Mac's Convenience</h1>
+					<h6 class="tm-site-description">Bay d'Espoir, NL</h6>	
+				</div>
+			</div>
+			<nav class="col-md-6 col-12 tm-nav">
+				<ul class="tm-nav-ul">
+					<li class="tm-nav-li"><a href="#about" class="tm-nav-link">ABOUT</a></li>
+					<li class="tm-nav-li"><a href="#announcements" class="tm-nav-link">ANNOUNCEMENTS</a></li>
+					<li class="tm-nav-li"><a href="#contact" class="tm-nav-link">CONTACT</a></li>
+				</ul>
+			</nav>	
+		</div>
+	</div>
 	<!-- Top box -->
 		<!-- Logo & Site Name -->
 		<div class="placeholder">
-			<div class="tm-header">
-				<div class="row tm-header-inner">
-					<div class="col-md-6 col-12">
-						<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
-						<div class="tm-site-text-box">
-							<h1 class="tm-site-title">Mac's Convenience</h1>
-							<h6 class="tm-site-description">Bay d'Espoir, NL</h6>	
-						</div>
-					</div>
-					<nav class="col-md-6 col-12 tm-nav">
-						<ul class="tm-nav-ul">
-							<li class="tm-nav-li"><a href="#about" class="tm-nav-link">ABOUT</a></li>
-							<li class="tm-nav-li"><a href="#announcements" class="tm-nav-link">ANNOUNCEMENTS</a></li>
-							<li class="tm-nav-li"><a href="#contact" class="tm-nav-link">CONTACT</a></li>
-						</ul>
-					</nav>	
-				</div>
-			</div>
 			<div class="parallax-window" data-parallax="scroll" data-image-src="img/macs1new.jpg">
 			</div>
 		</div>
@@ -45,7 +45,6 @@
 
 			<!-- Gallery -->
 			<div class="row tm-gallery">
-				<!-- gallery page 1 -->
 				<div id="tm-gallery-page-pizza" class="tm-gallery-page">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
@@ -67,27 +66,29 @@
 							<img src="img/icecreamnachos.jpg" alt="Image" class="img-fluid tm-gallery-img" />
 						</figure>
 					</article>
-					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-						<figure>
-							<img src="img/morebeer.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-						</figure>
-					</article>
-					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-						<figure>
-							<img src="img/faygo.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-						</figure>
-					</article>
-					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-						<figure>
-							<img src="img/biosteel.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-						</figure>
-					</article>
-					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-						<figure>
-							<img src="img/beer2.jpg" alt="Image" class="img-fluid tm-gallery-img" />
-						</figure>
-					</article>
-				</div> <!-- gallery page 1 -->
+				</div>
+				<div class="gallery-container">
+					<div class="gallery-grid">
+						<div class="gallery-item">
+							<img src="img/fireworks.jpg" alt="TODO">
+						</div>
+						<div class="gallery-item">
+							<img src="img/biosteel.jpg" alt="TODO">
+						</div>
+						<div class="gallery-item">
+							<img src="img/quidividibeer.jpg" alt="TODO">
+						</div>
+						<div class="gallery-item">
+							<img src="img/morebeer.jpg" alt="TODO">
+						</div>
+						<div class="gallery-item">
+							<img src="img/fishing.jpg" alt="TODO">
+						</div>
+						<div class="gallery-item">
+							<img src="img/hats.jpg" alt="TODO">
+						</div>
+					</div>
+				</div>
 			</div>
 		</main>
 
@@ -102,7 +103,7 @@
 		</div>
 
 		<div>
-			<header class="row tm-welcome-section" id="announcements">
+			<header class="row announcements-section" id="announcements">
 				<h2 class="col-12 text-center tm-section-title">Store Announcements</h2>
 				<p class="col-12 text-center fb-description">See our Facebook page below for updates on sales, new products, and more.</p>
 			</header>
