--- a/logo.html
+++ b/logo.html
@@ -11,18 +11,19 @@
 <body>
     <div class="container">
         <div class="scoop vanilla"></div>
+        <div class="scoop chocolate"></div>
         <div class="cone"></div>
-        <div class="flex-direction-row-container">
-          <div class="scoop-detail vanilla d1"></div>
-          <div class="scoop-detail vanilla d2"></div>
-          <div class="scoop-detail vanilla d3"></div>
-          <div class="scoop-detail vanilla d4"></div>
-        </div>
         <div class="flex-direction-row-container">
           <div class="scoop-detail chocolate d1"></div>
           <div class="scoop-detail chocolate d2"></div>
           <div class="scoop-detail chocolate d3"></div>
           <div class="scoop-detail chocolate d4"></div>
+        </div>
+        <div class="flex-direction-row-container">
+          <div class="scoop-detail vanilla d1"></div>
+          <div class="scoop-detail vanilla d2"></div>
+          <div class="scoop-detail vanilla d3"></div>
+          <div class="scoop-detail vanilla d4"></div>
         </div>
         <div class="flex-direction-row-container">
           <div class="scoop-detail strawberry d1"></div>
@@ -45,14 +46,14 @@
           <div class="cone-line line7"></div>
           <div class="cone-line line8"></div>
         </div>
-        <div class="logo-text">   
+        <!-- <div class="logo-text">   
             <div class="logo-top-text">
                 MAC'S
             </div>
             <div class="logo-bottom-text">
                 CONVENIENCE
             </div>
-        </div>
+        </div> -->
       </div>
 </body>
 </html>
