edited logo and added logo images

--- a/logo.html
+++ b/logo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/logo.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/logo.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -46,14 +46,14 @@
           <div class="cone-line line7"></div>
           <div class="cone-line line8"></div>
         </div>
-        <!-- <div class="logo-text">   
-            <div class="logo-top-text">
-                MAC'S
-            </div>
-            <div class="logo-bottom-text">
-                CONVENIENCE
-            </div>
-        </div> -->
+        <div class="logo-text">   
+          <div class="logo-top-text">
+            <span>MAC'S</span>
+          </div>
+          <div class="logo-bottom-text">
+              <span>CONVENIENCE</span>
+          </div>
+        </div>
       </div>
 </body>
 </html>
