updated nav bar, hero section and added facebook to contact section

--- a/index.html
+++ b/index.html
@@ -6,40 +6,43 @@
     <title>Mac's Convenience</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100..900&display=swap" rel="stylesheet">  
 	<link href="css/templatemo-style.css" rel="stylesheet" />
 </head>
 <body> 
 	<div class="container">
-	<div class="tm-header">
-		<div class="row tm-header-inner">
-			<div class="col-md-6 col-12">
-				<img src="img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
-				<div class="tm-site-text-box">
-					<h1 class="tm-site-title">Mac's Convenience</h1>
-					<h6 class="tm-site-description">Bay d'Espoir, NL</h6>	
+		<!-- Header -->
+		<div class="tm-header">
+			<div class="row tm-header-inner">
+				<div class="col-md-6 col-12">
+					<img src="img/transparentlogo.png" alt="Logo" class="tm-site-logo" /> 
 				</div>
+				<nav class="col-md-6 col-12 tm-nav">
+					<ul class="tm-nav-ul">
+						<li class="tm-nav-li"><a href="#about" class="tm-nav-link">ABOUT</a></li>
+						<li class="tm-nav-li"><a href="#announcements" class="tm-nav-link">ANNOUNCEMENTS</a></li>
+						<li class="tm-nav-li"><a href="#contact" class="tm-nav-link">CONTACT</a></li>
+					</ul>
+				</nav>	
 			</div>
-			<nav class="col-md-6 col-12 tm-nav">
-				<ul class="tm-nav-ul">
-					<li class="tm-nav-li"><a href="#about" class="tm-nav-link">ABOUT</a></li>
-					<li class="tm-nav-li"><a href="#announcements" class="tm-nav-link">ANNOUNCEMENTS</a></li>
-					<li class="tm-nav-li"><a href="#contact" class="tm-nav-link">CONTACT</a></li>
-				</ul>
-			</nav>	
 		</div>
-	</div>
-	<!-- Top box -->
 		<!-- Logo & Site Name -->
 		<div class="placeholder">
 			<div class="parallax-window" data-parallax="scroll" data-image-src="img/macs1new.jpg">
+				<div class="hero-text-overlay">
+					<h1 class="hero-text">Welcome to Mac's Convenience!</h1>
+					<div class="hero-text-overlay-inner">
+						<img class="location-icon" src="img/locationicon.png" alt="Location icon" /> 
+						<h1 class="hero-text">Bay d'Espoir, Newfoundland</h1>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		<main>
 			<header class="row tm-welcome-section" id="about">
-				<h2 class="col-12 text-center tm-section-title">Welcome to Mac's Convenience!</h2>
-				<p class="col-12 text-center">Mac’s Convenience is a fully equipped gas bar and convenience store. <br />
+				<h2 class="col-12 text-center tm-section-title">About Our Store</h2>
+				<p class="col-12 text-center">Mac’s Convenience is a fully equipped gas bar and convenience store located in Bay d'Espoir, Newfoundland. <br />
 					We sell gas, diesel, beer, cigarettes, soft serve, slushies, giftware, and much more!</p>
 			</header>
 
@@ -92,18 +95,8 @@
 			</div>
 		</main>
 
-		<div class="tm-container-inner tm-featured-image">
-			<div class="row">
-				<div class="col-12">
-					<div class="placeholder-2">
-						<div class="parallax-window-2" data-parallax="scroll" data-image-src="img/drone_enhanced.png"></div>		
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div>
-			<header class="row announcements-section" id="announcements">
+		<div class="announcements-section" id="announcements">
+			<header class="row announcements-description">
 				<h2 class="col-12 text-center tm-section-title">Store Announcements</h2>
 				<p class="col-12 text-center fb-description">See our Facebook page below for updates on sales, new products, and more.</p>
 			</header>
@@ -171,12 +164,16 @@
 				<div class="contact-info-section">
 					<h4 class="tm-info-title subsection-title">Contact</h4>
 					<a href="tel:709-882-2564" class="tm-contact-link">
-						<img src="img/phone-icon.png" alt="phone icon" class="tm-contact-icon"></img>
+						<img src="img/phoneicon.png" alt="phone icon" class="tm-contact-icon"></img>
 						(709) 882-2564
 					</a>
 					<a href="mailto:macsconveniencenl@gmail.com" class="tm-contact-link">
 						<img src="img/email-icon.png" alt="email icon" class="tm-contact-icon"></img>
 						macsconveniencenl@gmail.com
+					</a>
+					<a href="https://www.facebook.com/CGConvenience/" target="_blank" class="tm-contact-link">
+						<img src="img/facebookicon.png" alt="facebook icon" class="tm-contact-icon"></img>
+						Mac's Convenience
 					</a>
 				</div>
 				<div class="contact-subsection">
